fdo#67246: Detect BIFF 2 (and 3) file format like we should.

(cherry picked from commit b46688a663b8709e0e0795f25ef8961db1f46cba)

Change-Id: I1421cca4b0ef8e9410aab5725cc5a8d9cffef7a9